ID-3568, ID-3727, ID-3728 --> Attribute title in list view not vertically aligned correctly; Make 'Add another attribute' box abs positioned at top of added list.

--- a/packages/ui-library/src/css/result-sets.scss
+++ b/packages/ui-library/src/css/result-sets.scss
@@ -191,9 +191,11 @@
 		}
 		.item-title {
 			font-size: 16px;
-
 			&.name {
 				font-size: 22px;
+			}
+			&.no-sub-title {
+				margin-top: 13px;
 			}
 		}
 		.item-sub-title {
@@ -488,6 +490,9 @@
 		.item {
 			.item-title, .item-sub-title {
 				margin-left: 25px;
+				&.no-sub-title {
+					margin-top: 13px;
+				}
 			}
 			.grip {
 				position: absolute;
